# core

./: .gitignore  .pre-commit-config.yaml  Makefile  ansible.cfg  docker-compose.yml  playbook.yml  pyproject.toml  requirements.yml  vars.yml.tpl
roles/bootstrap_user/tasks/: main.yml
roles/create_user/tasks/: main.yml
roles/get_state_outputs/defaults/: main.yml
roles/get_state_outputs/tasks/: inner.yml  main.yml
roles/install_core/tasks/: main.yml
roles/lockdown_root/tasks/: main.yml
templates/: docker-compose.override.yml.j2  env.j2  hosts.ini.j2
