[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Dean Kayton <deankayton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.5.0"
boto3 = "^1.28.74"
jmespath = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
